# chaoxing-pdf-downloader

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  chaoxing_pdf_downloader.py  install.ps1  install.sh  pyproject.toml
src/: chaoxing_pdf_downloader.py
